applications/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr-dep
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - image: lscr.io/linuxserver/prowlarr:latest
          name: prowlarr
          volumeMounts:
            - mountPath: "/config"
              name: prowlarr-vol
          ports:
            - containerPort: 9696
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      volumes:
        - name: prowlarr-vol
          persistentVolumeClaim:
            claimName: prowlarr-pvc
status: {}
